Add brille optional dependency to tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py37,py38,py36-{base,matplotlib,phonopy_reader,all},py36-minrequirements-linux
+envlist = py37,py38,py36-{base,matplotlib,phonopy_reader,brille,all},py36-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
@@ -24,7 +24,7 @@ commands_pre =
     python -m pip install \
         --upgrade \
 	--upgrade-strategy eager \
-	'{toxinidir}[matplotlib,phonopy_reader]'
+	'{toxinidir}[matplotlib,phonopy_reader,brille]'
 commands = {[testenv]test_command} --cov
 
 # Test with no extras
@@ -36,7 +36,7 @@ commands_pre =
         --upgrade \
 	--upgrade-strategy eager \
         '{toxinidir}'
-commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib)"
+commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib or brille)"
 
 # Test with matplotlib extra only
 [testenv:py36-matplotlib]
@@ -47,7 +47,7 @@ commands_pre =
         --upgrade \
 	--upgrade-strategy eager \
         '{toxinidir}[matplotlib]'
-commands = {[testenv]test_command} --cov -m "matplotlib and not phonopy_reader"
+commands = {[testenv]test_command} --cov -m "matplotlib and not (phonopy_reader or brille)"
 
 # Test with phonopy_reader extra only
 [testenv:py36-phonopy_reader]
@@ -58,7 +58,18 @@ commands_pre =
         --upgrade \
 	--upgrade-strategy eager \
         '{toxinidir}[phonopy_reader]'
-commands = {[testenv]test_command} --cov -m "phonopy_reader and not matplotlib"
+commands = {[testenv]test_command} --cov -m "phonopy_reader and not (matplotlib or brille)"
+
+# Test with brille extra only
+[testenv:py36-brille]
+install_command = {[testenv:py37]install_command}
+deps = {[testenv:py37]deps}
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+        '{toxinidir}[matplotlib]'
+commands = {[testenv]test_command} --cov -m "brille and not (matplotlib or phonopy_reader)"
 
 # Run remaining tests that require multiple extras
 [testenv:py36-all]
@@ -69,7 +80,7 @@ commands_pre =
         --upgrade \
 	--upgrade-strategy eager \
         '{toxinidir}[phonopy_reader,matplotlib]'
-commands = {[testenv]test_command} --cov -m "phonopy_reader and matplotlib"
+commands = {[testenv]test_command} --cov -m "(phonopy_reader and matplotlib) or (phonopy_reader and brille) or (matplotlib and brille)"
 
 [testenv:py36-minrequirements-linux]
 whitelist_externals = rm
@@ -87,5 +98,5 @@ commands_pre =
 # Force rebuild of euphonic extension to avoid Numpy clash
 # (it still exists from py36 env)
     rm -rf build
-    python -m pip install '{toxinidir}[matplotlib,phonopy_reader]'
+    python -m pip install '{toxinidir}[matplotlib,phonopy_reader,brille]'
 commands = {[testenv]test_command}
