Add brille optional dependency to tests

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -20,7 +20,7 @@ deps =
 commands_pre =
     python -m pip install \
     --force-reinstall \
-    'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
+    'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
     --no-binary 'euphonic'
 
 
@@ -32,7 +32,7 @@ deps =
 commands_pre =
     python -m pip install \
     --force-reinstall \
-    'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
+    'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
 
 [testenv:conda-{py36,py37,py38}]
