Run marked tests separately

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,5 @@
 [tox]
-# Use conda to set up the python environments to run in
-# Pin tox-conda 0.7.3 for now as tox-conda 0.8 requires conda 4.9.0
-# which isn't yet installed on all CI nodes
-requires = tox-conda==0.7.3
+requires = tox-conda
 # The python environments to run the tests in
 envlist = py36,py37,py38,py36-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
@@ -20,14 +17,11 @@ install_command =
 deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
-commands_pre =
-    python -m pip install \
-    --force-reinstall \
-    --upgrade \
-    --upgrade-strategy eager \
-    '{toxinidir}[matplotlib,phonopy_reader]'
 commands =
-    python run_tests.py --cov --report {posargs}
+    python -m pip install --upgrade --upgrade-strategy eager '{toxinidir}[matplotlib]'
+    python run_tests.py --cov --report -m "not phonopy_reader"
+    python -m pip install --upgrade --upgrade-strategy eager '{toxinidir}[phonopy_reader]'
+    python run_tests.py --cov --report -m "phonopy_reader"
 
 [testenv:py36-minrequirements-linux]
 whitelist_externals = rm
@@ -40,12 +34,14 @@ platform =
     linux: linux
 deps =
     numpy==1.12.1
+    -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install --force-reinstall -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
-    python -m pip install --force-reinstall -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 # Force rebuild of euphonic extension to avoid Numpy clash
 # (it still exists from py36 env)
     rm -rf build
-    python -m pip install '{toxinidir}[matplotlib,phonopy_reader]'
 commands =
-    python run_tests.py {posargs}
+    python -m pip install '{toxinidir}[matplotlib]'
+    python run_tests.py --report -m "not phonopy_reader"
+    python -m pip install '{toxinidir}[matplotlib,phonopy_reader]'
+    python run_tests.py  --report -m "phonopy_reader"
