Use different tox envs for different extras

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,14 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py36,py37,py38,py36-minrequirements-linux
+envlist = {py36,py37,py38}-{base,phonopy_reader},py36-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
+
+[testenv:{py36,py37,py38}-base]
 install_command =
     python -m pip install \
         --force-reinstall \
@@ -17,15 +19,17 @@ install_command =
 deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
-commands =
-    python -m pip install --upgrade --upgrade-strategy eager '{toxinidir}[matplotlib]'
-    python run_tests.py --cov --report -m "not phonopy_reader"
-    python -m pip install --upgrade --upgrade-strategy eager '{toxinidir}[phonopy_reader]'
-    python run_tests.py --cov --report -m "phonopy_reader"
+commands_pre = python -m pip install --upgrade --upgrade-strategy eager '{toxinidir}[matplotlib]'
+commands = python run_tests.py --cov --report -m "not phonopy_reader"
+
+[testenv:{py36,py37,py38}-phonopy_reader]
+install_command = {[testenv:py36-base]install_command}
+deps = {[testenv:py36-base]deps}
+commands_pre = python -m pip install --upgrade --upgrade-strategy eager '{toxinidir}[phonopy_reader,matplotlib]'
+commands = python run_tests.py --cov --report -m "phonopy_reader"
 
 [testenv:py36-minrequirements-linux]
 whitelist_externals = rm
-changedir = tests_and_analysis/test
 install_command =
     python -m pip install \
     --force-reinstall \
@@ -40,8 +44,6 @@ commands_pre =
 # Force rebuild of euphonic extension to avoid Numpy clash
 # (it still exists from py36 env)
     rm -rf build
-commands =
-    python -m pip install '{toxinidir}[matplotlib]'
-    python run_tests.py --report -m "not phonopy_reader"
     python -m pip install '{toxinidir}[matplotlib,phonopy_reader]'
-    python run_tests.py  --report -m "phonopy_reader"
+commands =
+    python run_tests.py --report
