Reduce duplication in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
+test_command = python run_tests.py --report
 
 [testenv:{py36,py37,py38}-base]
 install_command =
@@ -14,36 +15,43 @@ install_command =
         --force-reinstall \
         --upgrade \
         --upgrade-strategy eager \
-        {opts} \
-        {packages}
+	{opts} \
+	{packages}
 deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
-commands_pre = python -m pip install --upgrade --upgrade-strategy eager '{toxinidir}[matplotlib]'
-commands = python run_tests.py --cov --report -m "not phonopy_reader"
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+	'{toxinidir}[matplotlib]'
+commands = {[testenv]test_command} --cov -m "not phonopy_reader"
 
 [testenv:{py36,py37,py38}-phonopy_reader]
 install_command = {[testenv:py36-base]install_command}
 deps = {[testenv:py36-base]deps}
-commands_pre = python -m pip install --upgrade --upgrade-strategy eager '{toxinidir}[phonopy_reader,matplotlib]'
-commands = python run_tests.py --cov --report -m "phonopy_reader"
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+        '{toxinidir}[phonopy_reader,matplotlib]'
+commands = {[testenv]test_command} --cov -m "phonopy_reader"
 
 [testenv:py36-minrequirements-linux]
 whitelist_externals = rm
 install_command =
-    python -m pip install \
-    --force-reinstall \
-    {opts} {packages}
+    python -m pip install --force-reinstall {opts} {packages}
 platform =
     linux: linux
 deps =
     numpy==1.12.1
-    -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 # Force rebuild of euphonic extension to avoid Numpy clash
 # (it still exists from py36 env)
     rm -rf build
     python -m pip install '{toxinidir}[matplotlib,phonopy_reader]'
-commands =
-    python run_tests.py --report
+commands = {[testenv]test_command}
