Add specific tests for different extras with tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-envlist = {py36,py37,py38}-{base,phonopy_reader},py36-minrequirements-linux
+envlist = py37,py38,py36-{base,matplotlib,phonopy_reader,all},py36-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
@@ -9,7 +9,7 @@ skipsdist = True
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
 
-[testenv:{py36,py37,py38}-base]
+[testenv:{py37,py38}]
 install_command =
     python -m pip install \
         --force-reinstall \
@@ -24,18 +24,52 @@ commands_pre =
     python -m pip install \
         --upgrade \
 	--upgrade-strategy eager \
-	'{toxinidir}[matplotlib]'
-commands = {[testenv]test_command} --cov -m "not phonopy_reader"
+	'{toxinidir}[matplotlib,phonopy_reader]'
+commands = {[testenv]test_command} --cov
 
-[testenv:{py36,py37,py38}-phonopy_reader]
-install_command = {[testenv:py36-base]install_command}
-deps = {[testenv:py36-base]deps}
+# Test with no extras
+[testenv:py36-base]
+install_command = {[testenv:py37]install_command}
+deps = {[testenv:py37]deps}
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+        '{toxinidir}'
+commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib)"
+
+# Test with matplotlib extra only
+[testenv:py36-matplotlib]
+install_command = {[testenv:py37]install_command}
+deps = {[testenv:py37]deps}
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+        '{toxinidir}[matplotlib]'
+commands = {[testenv]test_command} --cov -m "matplotlib and not phonopy_reader"
+
+# Test with phonopy_reader extra only
+[testenv:py36-phonopy_reader]
+install_command = {[testenv:py37]install_command}
+deps = {[testenv:py37]deps}
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+        '{toxinidir}[phonopy_reader]'
+commands = {[testenv]test_command} --cov -m "phonopy_reader and not matplotlib"
+
+# Run remaining tests that require multiple extras
+[testenv:py36-all]
+install_command = {[testenv:py37]install_command}
+deps = {[testenv:py37]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
 	--upgrade-strategy eager \
         '{toxinidir}[phonopy_reader,matplotlib]'
-commands = {[testenv]test_command} --cov -m "phonopy_reader"
+commands = {[testenv]test_command} --cov -m "phonopy_reader and matplotlib"
 
 [testenv:py36-minrequirements-linux]
 whitelist_externals = rm
