--- a/tests_and_analysis/test/pytest.ini
+++ b/tests_and_analysis/test/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 markers =
-    unit: mark tests as a unit test
-    integration: mark tests as an integration test
+    phonopy_reader: requires euphonic[phonopy_reader] extra to be installed
+    matplotlib: requires euphonic[matplotlib] extra to be installed
