--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -37,11 +37,11 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu')
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          coverage-reports: tests_and_analysis/test/reports/coverage.xml
+          coverage-reports: tests_and_analysis/test/reports/coverage*.xml
       - uses: codecov/codecov-action@v2
         if: startsWith(matrix.os, 'ubuntu')
         with:
-          files: tests_and_analysis/test/reports/coverage.xml
+          files: tests_and_analysis/test/reports/coverage*.xml
 
   publish-test-results:
     needs: test
