Test optional dependencies, addresses #198 (#199)
* Add phonopy_reader markers for ForceConstants

* Add phonopy_reader marker to calculate_qpoint_phonon_modes test

* Add phonopy_reader markers to remaining tests

* Re-add import mocking for Phonopy import error tests

* Run marked tests separately

* Correctly name test function

* Use different tox envs for different extras

* Reduce duplication in tox.ini

* Use unique test result filenames

* Mark script tests with phonopy_reader

* Add matplotlib markers to tests

* Add specific tests for different extras with tox

* Remove unit and integration marks

* Fix Codacy issues

* Allow for multiple coverage reports

* Use main function in run_tests

Avoid Codacy issues with redefining variables from outer scope

* Small updates in response to review comments

--- a/tox.ini
+++ b/tox.ini
@@ -1,51 +1,91 @@
 [tox]
-# Use conda to set up the python environments to run in
-# Pin tox-conda 0.7.3 for now as tox-conda 0.8 requires conda 4.9.0
-# which isn't yet installed on all CI nodes
-requires = tox-conda==0.7.3
+requires = tox-conda
 # The python environments to run the tests in
-envlist = py36,py37,py38,py36-minrequirements-linux
+envlist = py37,py38,py36-{base,matplotlib,phonopy_reader,all},py36-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
+test_command = python run_tests.py --report
+
+[testenv:{py37,py38}]
 install_command =
     python -m pip install \
         --force-reinstall \
         --upgrade \
         --upgrade-strategy eager \
-        {opts} \
-        {packages}
+	{opts} \
+	{packages}
 deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     python -m pip install \
-    --force-reinstall \
-    --upgrade \
-    --upgrade-strategy eager \
-    '{toxinidir}[matplotlib,phonopy_reader]'
-commands =
-    python run_tests.py --cov --report {posargs}
+        --upgrade \
+	--upgrade-strategy eager \
+	'{toxinidir}[matplotlib,phonopy_reader]'
+commands = {[testenv]test_command} --cov
+
+# Test with no extras
+[testenv:py36-base]
+install_command = {[testenv:py37]install_command}
+deps = {[testenv:py37]deps}
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+        '{toxinidir}'
+commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib)"
+
+# Test with matplotlib extra only
+[testenv:py36-matplotlib]
+install_command = {[testenv:py37]install_command}
+deps = {[testenv:py37]deps}
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+        '{toxinidir}[matplotlib]'
+commands = {[testenv]test_command} --cov -m "matplotlib and not phonopy_reader"
+
+# Test with phonopy_reader extra only
+[testenv:py36-phonopy_reader]
+install_command = {[testenv:py37]install_command}
+deps = {[testenv:py37]deps}
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+        '{toxinidir}[phonopy_reader]'
+commands = {[testenv]test_command} --cov -m "phonopy_reader and not matplotlib"
+
+# Run remaining tests that require multiple extras
+[testenv:py36-all]
+install_command = {[testenv:py37]install_command}
+deps = {[testenv:py37]deps}
+commands_pre =
+    python -m pip install \
+        --upgrade \
+	--upgrade-strategy eager \
+        '{toxinidir}[phonopy_reader,matplotlib]'
+commands = {[testenv]test_command} --cov -m "phonopy_reader and matplotlib"
 
 [testenv:py36-minrequirements-linux]
 whitelist_externals = rm
-changedir = tests_and_analysis/test
 install_command =
-    python -m pip install \
-    --force-reinstall \
-    {opts} {packages}
+    python -m pip install --force-reinstall {opts} {packages}
 platform =
     linux: linux
 deps =
     numpy==1.12.1
 commands_pre =
-    python -m pip install --force-reinstall -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
-    python -m pip install --force-reinstall -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 # Force rebuild of euphonic extension to avoid Numpy clash
 # (it still exists from py36 env)
     rm -rf build
     python -m pip install '{toxinidir}[matplotlib,phonopy_reader]'
-commands =
-    python run_tests.py {posargs}
+commands = {[testenv]test_command}
