Correctly mark brille tests
Grid must be a fixture so it is not run unless marked
tests are run

--- a/tox.ini
+++ b/tox.ini
@@ -68,7 +68,7 @@ commands_pre =
     python -m pip install \
         --upgrade \
 	--upgrade-strategy eager \
-        '{toxinidir}[matplotlib]'
+        '{toxinidir}[brille]'
 commands = {[testenv]test_command} --cov -m "brille and not (matplotlib or phonopy_reader)"
 
 # Run remaining tests that require multiple extras
