--- a/tests_and_analysis/test/pytest.ini
+++ b/tests_and_analysis/test/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     phonopy_reader: requires euphonic[phonopy_reader] extra to be installed
     matplotlib: requires euphonic[matplotlib] extra to be installed
+    brille: requires euphonic[brille] extra to be installed
