Don't install and test Brille on MacOS
The latest (0.5.7) version of Brille bundles a libomp.dylib file
which uses OpenMP 13. Versions 12 and above seem to be very buggy
on MacOS, see https://github.com/scikit-learn/scikit-learn issue
21182 and related issues.

This can be fixed by downloading a version 11 libomp.dylib (e.g. from
https://anaconda.org/conda-forge/llvm-openmp/11.1.0/download/osx-64/llvm-openmp-11.1.0-hda6cdc1_1.tar.bz2)
and replacing the one bundled in brille/.dylibs. However, this is
something that should probably be fixed in the Brille releases rather
than hacked into our CI so for now just work around it.

--- a/tox.ini
+++ b/tox.ini
@@ -1,93 +1,107 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py37,py38,py36-{base,matplotlib,phonopy_reader,brille,all},py36-minrequirements-linux
+envlist = {py37,py38}-{linux,windows,macos},py36-{base,matplotlib,phonopy_reader,all},py36-brille-{linux,windows},py36-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
 [testenv]
+platform =
+    linux: linux
+    windows: win32
+    macos: darwin
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
 
-[testenv:{py37,py38}]
+# Test with all optional extras (except brille on MacOS temporarily,
+# as workaround for incompatible buggy OpenMP 13 which is bundled with
+# Brille 0.5.7. This interferes with other modules too e.g. Pyyaml
+# so don't even install Brille.)
+[testenv:{py37,py38}-{linux,windows,macos}]
 install_command =
     python -m pip install \
         --force-reinstall \
         --upgrade \
         --upgrade-strategy eager \
-	{opts} \
-	{packages}
+        {opts} \
+        {packages}
 deps =
     numpy
     -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    python -m pip install \
-        --upgrade \
-	--upgrade-strategy eager \
-	'{toxinidir}[matplotlib,phonopy_reader,brille]'
-commands = {[testenv]test_command} --cov
+    linux,windows: python -m pip install \
+    linux,windows: --upgrade \
+    linux,windows: --upgrade-strategy eager \
+    linux,windows: '{toxinidir}[matplotlib,phonopy_reader,brille]'
+    macos: python -m pip install \
+    macos: --upgrade \
+    macos: --upgrade-strategy eager \
+    macos: '{toxinidir}[matplotlib,phonopy_reader]'
+commands =
+    linux,windows: {[testenv]test_command} --cov
+    macos: {[testenv]test_command} --cov -m "not brille"
 
 # Test with no extras
 [testenv:py36-base]
-install_command = {[testenv:py37]install_command}
-deps = {[testenv:py37]deps}
+install_command = {[testenv:py37-linux]install_command}
+deps = {[testenv:py37-linux]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
-	--upgrade-strategy eager \
+        --upgrade-strategy eager \
         '{toxinidir}'
 commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib or brille)"
 
 # Test with matplotlib extra only
 [testenv:py36-matplotlib]
-install_command = {[testenv:py37]install_command}
-deps = {[testenv:py37]deps}
+install_command = {[testenv:py37-linux]install_command}
+deps = {[testenv:py37-linux]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
-	--upgrade-strategy eager \
+        --upgrade-strategy eager \
         '{toxinidir}[matplotlib]'
 commands = {[testenv]test_command} --cov -m "matplotlib and not (phonopy_reader or brille)"
 
 # Test with phonopy_reader extra only
 [testenv:py36-phonopy_reader]
-install_command = {[testenv:py37]install_command}
-deps = {[testenv:py37]deps}
+install_command = {[testenv:py37-linux]install_command}
+deps = {[testenv:py37-linux]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
-	--upgrade-strategy eager \
+        --upgrade-strategy eager \
         '{toxinidir}[phonopy_reader]'
 commands = {[testenv]test_command} --cov -m "phonopy_reader and not (matplotlib or brille)"
 
-# Test with brille extra only
-[testenv:py36-brille]
-install_command = {[testenv:py37]install_command}
-deps = {[testenv:py37]deps}
+# Test with brille extra only (except on MacOS)
+[testenv:py36-brille-{linux,windows}]
+install_command = {[testenv:py37-linux]install_command}
+deps = {[testenv:py37-linux]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
-	--upgrade-strategy eager \
+        --upgrade-strategy eager \
         '{toxinidir}[brille]'
 commands = {[testenv]test_command} --cov -m "brille and not (matplotlib or phonopy_reader)"
 
 # Run remaining tests that require multiple extras
 [testenv:py36-all]
-install_command = {[testenv:py37]install_command}
-deps = {[testenv:py37]deps}
+install_command = {[testenv:py37-linux]install_command}
+deps = {[testenv:py37-linux]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
-	--upgrade-strategy eager \
+        --upgrade-strategy eager \
         '{toxinidir}[phonopy_reader,matplotlib]'
-commands = {[testenv]test_command} --cov -m "(phonopy_reader and matplotlib) or (phonopy_reader and brille) or (matplotlib and brille)"
+commands =
+    linux,windows: {[testenv]test_command} --cov -m "(phonopy_reader and matplotlib) or (phonopy_reader and brille) or (matplotlib and brille)"
+    macos: {[testenv]test_command} --cov -m "(phonopy_reader and matplotlib)"
 
 [testenv:py36-minrequirements-linux]
 whitelist_externals = rm
 install_command =
     python -m pip install --force-reinstall {opts} {packages}
-platform =
-    linux: linux
 deps =
     numpy==1.12.1
 commands_pre =
