Add multiple_extras test marker
This should be added to any test which needs multiple optional
dependencies e.g. to a test which has both pytest.mark.matplotlib
and pytest.mark.phonopy_reader. This allows
'pytest -m multiple_extras' to be used rather than the convoluted
'pytest -m "(phonopy_reader and matplotlib) or (phonopy_reader and brille) or (matplotlib and brille)"'

--- a/tox.ini
+++ b/tox.ini
@@ -61,7 +61,7 @@ commands_pre =
         --upgrade \
         --upgrade-strategy eager \
         '{toxinidir}[matplotlib]'
-commands = {[testenv]test_command} --cov -m "matplotlib and not (phonopy_reader or brille)"
+commands = {[testenv]test_command} --cov -m "matplotlib and not multiple_extras"
 
 # Test with phonopy_reader extra only
 [testenv:py36-phonopy_reader]
@@ -72,7 +72,7 @@ commands_pre =
         --upgrade \
         --upgrade-strategy eager \
         '{toxinidir}[phonopy_reader]'
-commands = {[testenv]test_command} --cov -m "phonopy_reader and not (matplotlib or brille)"
+commands = {[testenv]test_command} --cov -m "phonopy_reader and not multiple_extras"
 
 # Test with brille extra only (except on MacOS)
 [testenv:py36-brille-{linux,windows}]
@@ -83,7 +83,7 @@ commands_pre =
         --upgrade \
         --upgrade-strategy eager \
         '{toxinidir}[brille]'
-commands = {[testenv]test_command} --cov -m "brille and not (matplotlib or phonopy_reader)"
+commands = {[testenv]test_command} --cov -m "brille and not multiple_extras"
 
 # Run remaining tests that require multiple extras
 [testenv:py36-all]
@@ -95,8 +95,8 @@ commands_pre =
         --upgrade-strategy eager \
         '{toxinidir}[phonopy_reader,matplotlib]'
 commands =
-    linux,windows: {[testenv]test_command} --cov -m "(phonopy_reader and matplotlib) or (phonopy_reader and brille) or (matplotlib and brille)"
-    macos: {[testenv]test_command} --cov -m "(phonopy_reader and matplotlib)"
+    linux,windows: {[testenv]test_command} --cov -m multiple_extras
+    macos: {[testenv]test_command} --cov -m "multiple_extras and not brille"
 
 [testenv:py36-minrequirements-linux]
 whitelist_externals = rm
