Pin windows-2019 for testing
The move for windows-latest to windows-2022 has broken C extension
building, see https://github.com/actions/virtual-environments issue
5141

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -10,7 +10,7 @@ jobs:
     if: github.event.action != 'labeled' || github.event.label.name == 'run CI'
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-2019, macos-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
