--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = {pypi,conda}-{py36,py37,py38},pypisource-py36
+envlist = pypi-py36,{pypi,conda}-{py37,py38},conda-{py39,py310},pypisource-{py36,py310}
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
@@ -12,7 +12,7 @@ commands =
     python run_tests.py --report
 
 # Test PyPI source distribution
-[testenv:pypisource-py36]
+[testenv:pypisource-py36,py310]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
@@ -35,7 +35,7 @@ commands_pre =
     'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
 
-[testenv:conda-{py36,py37,py38}]
+[testenv:conda-{py37,py38,py39,py310}]
 whitelist_externals = conda
 install_command = conda install {packages}
 conda_channels =
