--- a/.github/workflows/create-landing-page.yml
+++ b/.github/workflows/create-landing-page.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install cffconvert==2.0.0
+          python -m pip install pyyaml==6.0
       - name: Set env var based on (master) push trigger
         if: github.event_name == 'push'
         run: echo "PAGE_TYPE=latest" >> $GITHUB_ENV
