Only run on branches with run_ci, master or release name

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,11 +1,11 @@
 name: run-tests
 on:
   push:
-    branches-ignore:
-      - '**_no_ci'
+    branches:
+      - '**master**'
+      - '**_run_ci**'
+      - '**release**'
   pull_request:
-    branches-ignore:
-      - '**_no_ci'
     types: [opened, reopened, labeled]
   workflow_dispatch:
 
