--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,13 +1,20 @@
 name: run-tests
 on:
   push:
+    branches:
+      - '**master**'
+      - '**_run_ci**'
+      - '**release**'
   pull_request:
     types: [opened, reopened, labeled]
   workflow_dispatch:
 
 jobs:
   test:
-    if: github.event.action != 'labeled' || github.event.label.name == 'run CI'
+    if: |
+       github.event_name != 'pull_request' ||
+       (github.event.action == 'labeled' && github.event.label.name == 'run_ci') ||
+       (github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'no_ci'))
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2019, macos-latest]
