Update Python test/release versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py37,py38,py36-{base,matplotlib,phonopy_reader,all},py36-minrequirements-linux
+envlist = py37,py38,py39,py310,py36-{base,matplotlib,phonopy_reader,all},py36-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
@@ -9,7 +9,7 @@ skipsdist = True
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
 
-[testenv:{py37,py38}]
+[testenv:{py37,py38,py39,py310}]
 install_command =
     python -m pip install \
         --force-reinstall \
