--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -8,11 +8,11 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows-2019, macos-latest, ubuntu-latest]
+        os: [windows-latest, macos-latest, ubuntu-latest]
         architecture: [x64]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
         include:
-          - os: windows-2019
+          - os: windows-latest
             wheelname: win
           - os: macos-latest
             wheelname: macos
@@ -28,6 +28,12 @@ jobs:
           - python-version: 3.8
             manylinux-version-tag: cp38-cp38
             numpy-version: 1.17.3
+          - python-version: 3.9
+            manylinux-version-tag: cp39-cp39
+            numpy-version: 1.19.3
+          - python-version: 3.10
+            manylinux-version-tag: cp310-cp310
+            numpy-version: 1.21.3
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -63,7 +69,7 @@ jobs:
           pip-wheel-args: '--no-deps -w wheelhouse'
 
       - name: Create source distribution
-        if: matrix.os == 'windows-2019' && matrix.python-version == '3.8'
+        if: matrix.os == 'windows-latest' && matrix.python-version == '3.10'
         run: |
           python setup.py sdist
         shell: bash
@@ -74,7 +80,7 @@ jobs:
             name: wheels
             path: wheelhouse/*-${{ matrix.wheelname }}*.whl
       - name: Upload source dist to PyPI
-        if: matrix.os == 'windows-2019' && matrix.python-version == '3.8'
+        if: matrix.os == 'windows-latest' && matrix.python-version == '3.10'
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
