--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = pypi-py36,{pypi,conda}-{py37,py38},conda-{py39,py310},pypisource-{py36,py310}
+envlist = pypi-py36,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py36,py310}
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
@@ -24,7 +24,7 @@ commands_pre =
     --no-binary 'euphonic'
 
 
-[testenv:pypi-{py36,py37,py38}]
+[testenv:pypi-{py36,py37,py38,py39,py310}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
