--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -33,7 +33,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r tests_and_analysis/ci_requirements.txt
-      - name: Run tests
+      - name: Run tests, skip Python 3.8, 3.9 unless workflow dispatch
+        if: github.event_name != 'workflow_dispatch'
+        env:
+          TOX_SKIP_ENV: '.*?(py38|py39).*?'
+        shell: bash -l {0}
+        run: python -m tox
+      - name: Run tests, workflow dispatch so test all Python versions
+        if: github.event_name == 'workflow_dispatch'
         shell: bash -l {0}
         run: python -m tox
       - name: Upload test results
