--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -6,7 +6,7 @@ on:
       - '**_run_ci**'
       - '**release**'
   pull_request:
-    types: [opened, reopened, labeled]
+    types: [opened, reopened, labeled, synchronize]
   workflow_dispatch:
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
        (github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'no_ci'))
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2019, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -33,7 +33,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r tests_and_analysis/ci_requirements.txt
-      - name: Run tests
+      - name: Run tests, skip Python 3.8, 3.9 unless workflow dispatch
+        if: github.event_name != 'workflow_dispatch'
+        env:
+          TOX_SKIP_ENV: '.*?(py38|py39).*?'
+        shell: bash -l {0}
+        run: python -m tox
+      - name: Run tests, workflow dispatch so test all Python versions
+        if: github.event_name == 'workflow_dispatch'
         shell: bash -l {0}
         run: python -m tox
       - name: Upload test results
