--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
         architecture: [x64]
-        python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
         include:
           - os: windows-latest
             wheelname: win
@@ -42,16 +42,17 @@ jobs:
         with:
           ref: v0.6.5
           fetch-depth: 0 # Ensure tags are fetched for versioning
-      - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+      - name: Setup Python ${{ matrix.python-version }} with Conda
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          architecture: ${{ matrix.architecture }}
           python-version: ${{ matrix.python-version }}
       - name: Update Python pip, wheel, and twine
         run: |
           python -m pip install --upgrade pip wheel twine
         shell: bash
-
+      - name: Install llvm on Macos
+        if: startsWith(matrix.os, 'macos')
+        run: brew install llvm
       - name: Build Python wheel
         if: matrix.os != 'ubuntu-latest'
         env:
