--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -47,21 +47,21 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Update Python pip, wheel, and twine
+        shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip wheel twine
-        shell: bash
       - name: Install llvm on Macos
         if: startsWith(matrix.os, 'macos')
         run: brew install llvm
       - name: Build Python wheel
         if: matrix.os != 'ubuntu-latest'
+        shell: bash -l {0}
         env:
           NUMPY_VERSION: ${{ matrix.numpy-version }}
         run: |
           # Build against lowest required Numpy version
           python -m pip install numpy==${NUMPY_VERSION}
           python -m pip wheel . -w wheelhouse --no-deps
-        shell: bash
 
       - name: Build manylinux Python wheel
         if: matrix.os == 'ubuntu-latest'
@@ -73,9 +73,9 @@ jobs:
 
       - name: Create source distribution
         if: matrix.os == 'windows-latest' && matrix.python-version == '3.10'
+        shell: bash -l {0}
         run: |
           python setup.py sdist
-        shell: bash
 
       - name: Upload as build artifacts
         uses: actions/upload-artifact@v2
@@ -84,17 +84,17 @@ jobs:
             path: wheelhouse/*-${{ matrix.wheelname }}*.whl
       - name: Upload source dist to PyPI
         if: matrix.os == 'windows-latest' && matrix.python-version == '3.10'
+        shell: bash -l {0}
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
           python -m twine upload dist/*.tar.gz
-        shell: bash
       - name: Upload wheel to PyPI
+        shell: bash -l {0}
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
           WHEEL_NAME: ${{ matrix.wheelname }}
         run: |
           python -m twine upload wheelhouse/*-${WHEEL_NAME}*.whl
-        shell: bash
