--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [windows-latest, macos-latest, ubuntu-latest]
         python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
         include:
           - os: windows-latest
@@ -85,7 +85,7 @@ jobs:
             name: wheels
             path: wheelhouse/*-${{ matrix.wheelname }}*.whl
       - name: Upload source dist to PyPI
-        if: matrix.os == 'windows-latest' && matrix.python-version == '3.10'
+        if: github.event_name == 'release' && matrix.os == 'windows-latest' && matrix.python-version == '3.10'
         shell: bash -l {0}
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
@@ -93,6 +93,7 @@ jobs:
         run: |
           python -m twine upload dist/*.tar.gz
       - name: Upload wheel to PyPI
+        if: github.event_name == 'release'
         shell: bash -l {0}
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
