--- a/.github/workflows/build_upload_pypi_wheels.yml
+++ b/.github/workflows/build_upload_pypi_wheels.yml
@@ -3,7 +3,7 @@ name: Build and upload PyPI wheels and source dist
 on:
   release:
     types: [published]
-  push:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -39,7 +39,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: v0.6.5
           fetch-depth: 0 # Ensure tags are fetched for versioning
       - name: Setup Python ${{ matrix.python-version }} with Conda
         uses: conda-incubator/setup-miniconda@v2
