Fix release testing

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -12,7 +12,7 @@ commands =
     python run_tests.py --report
 
 # Test PyPI source distribution
-[testenv:pypisource-py36,py310]
+[testenv:pypisource-{py36,py310}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
