--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -18,6 +18,9 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.6
+      - name: Install llvm on Macos
+        if: startsWith(matrix.os, 'macos')
+        run: brew install llvm
       - name: Update pip and install dependencies
         shell: bash -l {0}
         run: |
