--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -14,12 +14,13 @@ jobs:
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: v${{ github.event.inputs.version }}
+      - uses: actions/checkout@v3
       - uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.6
+      - name: Install llvm on Macos
+        if: startsWith(matrix.os, 'macos')
+        run: brew install llvm
       - name: Update pip and install dependencies
         shell: bash -l {0}
         run: |
