--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 requires = tox-conda
 # The python environments to run the tests in
-envlist = py37,py38,py39,py310,py36-{base,matplotlib,phonopy_reader,all},py36-minrequirements-linux
+envlist = py38,py39,py310,py37-{base,matplotlib,phonopy_reader,all},py37-minrequirements-linux
 # Skip the execution of setup.py as we do it with the correct arg in commands_pre below
 skipsdist = True
 
@@ -9,7 +9,7 @@ skipsdist = True
 changedir = tests_and_analysis/test
 test_command = python run_tests.py --report
 
-[testenv:{py37,py38,py39,py310}]
+[testenv:{py38,py39,py310}]
 install_command =
     python -m pip install \
         --force-reinstall \
@@ -28,9 +28,9 @@ commands_pre =
 commands = {[testenv]test_command} --cov
 
 # Test with no extras
-[testenv:py36-base]
-install_command = {[testenv:py37]install_command}
-deps = {[testenv:py37]deps}
+[testenv:py37-base]
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
@@ -39,9 +39,9 @@ commands_pre =
 commands = {[testenv]test_command} --cov -m "not (phonopy_reader or matplotlib)"
 
 # Test with matplotlib extra only
-[testenv:py36-matplotlib]
-install_command = {[testenv:py37]install_command}
-deps = {[testenv:py37]deps}
+[testenv:py37-matplotlib]
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
@@ -50,9 +50,9 @@ commands_pre =
 commands = {[testenv]test_command} --cov -m "matplotlib and not phonopy_reader"
 
 # Test with phonopy_reader extra only
-[testenv:py36-phonopy_reader]
-install_command = {[testenv:py37]install_command}
-deps = {[testenv:py37]deps}
+[testenv:py37-phonopy_reader]
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
@@ -61,9 +61,9 @@ commands_pre =
 commands = {[testenv]test_command} --cov -m "phonopy_reader and not matplotlib"
 
 # Run remaining tests that require multiple extras
-[testenv:py36-all]
-install_command = {[testenv:py37]install_command}
-deps = {[testenv:py37]deps}
+[testenv:py37-all]
+install_command = {[testenv:py310]install_command}
+deps = {[testenv:py310]deps}
 commands_pre =
     python -m pip install \
         --upgrade \
@@ -71,14 +71,14 @@ commands_pre =
         '{toxinidir}[phonopy_reader,matplotlib]'
 commands = {[testenv]test_command} --cov -m "phonopy_reader and matplotlib"
 
-[testenv:py36-minrequirements-linux]
+[testenv:py37-minrequirements-linux]
 whitelist_externals = rm
 install_command =
     python -m pip install --force-reinstall {opts} {packages}
 platform =
     linux: linux
 deps =
-    numpy==1.12.1
+    numpy==1.14.5
 commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
