Add PyPI minimum dependency test

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = {pypi,conda}-{py37,py38,py39,py310},pypisource-{py37,py310}
+envlist = pypi-py37-min,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py37,py310}
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
@@ -32,6 +32,16 @@ deps =
 commands_pre =
     python -m pip install \
     --force-reinstall \
+    'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
+    --only-binary 'euphonic'
+
+[testenv:pypi-py37-min]
+install_command = python -m pip install --force-reinstall {opts} {packages}
+deps =
+    -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+commands_pre =
+    python -m pip install \
     'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
 
