Correctly remove build dir - force rebuild with lower Numpy

--- a/tox.ini
+++ b/tox.ini
@@ -85,7 +85,7 @@ commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/tox_requirements.txt
 # Force rebuild of euphonic extension to avoid Numpy clash
-# (it still exists from py36 env)
-    rm -rf build
+# (it still exists from py37 env)
+    rm -rf {toxinidir}/build
     python -m pip install '{toxinidir}[matplotlib,phonopy_reader]'
 commands = {[testenv]test_command}
