--- a/release_tox.ini
+++ b/release_tox.ini
@@ -38,9 +38,12 @@ commands_pre =
 [testenv:pypi-py37-min]
 install_command = python -m pip install --force-reinstall {opts} {packages}
 deps =
-    -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
-    -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+    numpy==1.14.5
 commands_pre =
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/tox_requirements.txt
     python -m pip install \
     'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
