Drop Python 3.6 support (#237)
* Change minimum required versions

- Numpy 1.12.1 -> 1.14.5 as this is the lowest Python 3.7 wheel on PyPI
- Scipy 1.0.0 -> 1.1.0 as this is the lowest Python 3.7 wheel on PyPI
- Pint 0.9 -> 0.10.1, previously we had to support 0.9 as 0.10 is not
  compatible with Numpy 1.12, but now we can upgrade and avoid
  workarounds, see https://github.com/pace-neutrons/Euphonic/pull/101
- Matplotlib 2.0.0 -> 2.2.2 as this is the lowest Python 3.7 wheel on PyPI
- H5py 2.7.0 -> 2.8.0 as this is the lowest Python 3.7 wheel on PyPI
- Other dependencies left the same as either there are no version
  specific wheels anyway, and/or we don't need any newer features

* Remove Numpy unique workaround for v1.12

* Remove workaround for Pint 0.9

Units definition file with Bohr units is included in Pint >= 0.10

* Stop testing with Python 3.6

* Add PyPI minimum dependency test

* Correctly remove build dir - force rebuild with lower Numpy

* Fix crystal test - just text symprec is passed correctly

* Update changelog

* Fix minimum req release test

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = pypi-py36,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py36,py310}
+envlist = pypi-py37-min,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py37,py310}
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
@@ -12,7 +12,7 @@ commands =
     python run_tests.py --report
 
 # Test PyPI source distribution
-[testenv:pypisource-{py36,py310}]
+[testenv:pypisource-{py37,py310}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
@@ -24,7 +24,7 @@ commands_pre =
     --no-binary 'euphonic'
 
 
-[testenv:pypi-{py36,py37,py38,py39,py310}]
+[testenv:pypi-{py37,py38,py39,py310}]
 install_command = python -m pip install {opts} {packages}
 deps =
     numpy
@@ -32,6 +32,19 @@ deps =
 commands_pre =
     python -m pip install \
     --force-reinstall \
+    'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
+    --only-binary 'euphonic'
+
+[testenv:pypi-py37-min]
+install_command = python -m pip install --force-reinstall {opts} {packages}
+deps =
+    numpy==1.14.5
+commands_pre =
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/minimum_euphonic_requirements.txt
+    python -m pip install --force-reinstall \
+        -r{toxinidir}/tests_and_analysis/tox_requirements.txt
+    python -m pip install \
     'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
 
