Update NAC tests/logic
- Don't require nac factor is in phonopy.yaml, even if born is present
- Don't require nac factor is in BORN file
- Raise KeyError if nac factor is in neither phonopy.yaml or BORN
- Only try to dipole correct force constants if born is present
- Add tests for the above combinations of nac in phonopy/BORN/neither
- Update NaCl_prim/phonopy.yaml to have nac_factor (otherwise causes
  error)

--- a/tests_and_analysis/test/data/phonopy_files/NaCl_prim/phonopy_nacl.yaml
+++ b/tests_and_analysis/test/data/phonopy_files/NaCl_prim/phonopy_nacl.yaml
@@ -2,6 +2,7 @@ phonopy:
   version: 2.5.0
   frequency_unit_conversion_factor: 15.633302
   symmetry_tolerance: 1.00000e-05
+  nac_unit_conversion_factor: 14.400000
   configuration:
     atom_name: "Na Cl"
     dim: "2 2 2"
@@ -10,7 +11,7 @@ phonopy:
     band_points: "101"
     eigenvectors: ".TRUE."
     include_all: ".TRUE."
-    nac: ".FALSE."
+    nac: ".TRUE."
     write_force_constants: ".true."
     writefc_format: "hdf5"
 
