--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -17,7 +17,8 @@ jobs:
        (github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'no_ci'))
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        #os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -33,32 +34,47 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r tests_and_analysis/ci_requirements.txt
-      - name: Run tests, skip Python 3.8, 3.9 unless workflow dispatch
-        if: github.event_name != 'workflow_dispatch'
-        env:
-          TOX_SKIP_ENV: '.*?(py38|py39).*?'
+#      - name: Run tests, skip Python 3.8, 3.9 unless workflow dispatch
+#        if: github.event_name != 'workflow_dispatch'
+#        env:
+#          TOX_SKIP_ENV: '.*?(py38|py39).*?'
+#        shell: bash -l {0}
+#        run: python -m tox
+#      - name: Run tests, workflow dispatch so test all Python versions
+#        if: github.event_name == 'workflow_dispatch'
+#        shell: bash -l {0}
+#        run: python -m tox
+#      - name: Upload test results
+#        if: always()
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: Unit test results ${{ matrix.os }}
+#          path: tests_and_analysis/test/reports/junit_report*.xml
+      - name: Run Sphinx doctests
         shell: bash -l {0}
-        run: python -m tox
-      - name: Run tests, workflow dispatch so test all Python versions
-        if: github.event_name == 'workflow_dispatch'
-        shell: bash -l {0}
-        run: python -m tox
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: Unit test results ${{ matrix.os }}
-          path: tests_and_analysis/test/reports/junit_report*.xml
-      - name: Publish Codacy coverage
-        uses: codacy/codacy-coverage-reporter-action@v1
+        run: |
+          python -m pip install -r doc/requirements.txt
+          sphinx-build -c doc/source/conf.py -b doctest doc/source .
         if: startsWith(matrix.os, 'ubuntu')
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: tests_and_analysis/test/reports/coverage*.xml
-      - uses: codecov/codecov-action@v2
+      - name: Upload doctest results
         if: startsWith(matrix.os, 'ubuntu')
+        uses: actions/upload-artifact@v2
         with:
-          files: tests_and_analysis/test/reports/coverage*.xml
+          name: Doctest results
+          path: output.txt
+#      - name: Publish Codacy coverage
+#        uses: codacy/codacy-coverage-reporter-action@v1
+#        if: startsWith(matrix.os, 'ubuntu')
+#        with:
+#          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+#          coverage-reports: tests_and_analysis/test/reports/coverage*.xml
+#      - uses: codecov/codecov-action@v2
+#        if: startsWith(matrix.os, 'ubuntu')
+#        with:
+#          files: tests_and_analysis/test/reports/coverage*.xml
 
   publish-test-results:
     needs: test
