--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -55,7 +55,7 @@ jobs:
         shell: bash -l {0}
         run: |
           python -m pip install -r doc/requirements.txt
-          sphinx-build -c doc/source/conf.py -b doctest doc/source .
+          sphinx-build -c doc/source -b doctest doc/source .
       - name: Upload doctest results
         if: startsWith(matrix.os, 'ubuntu')
         uses: actions/upload-artifact@v2
