--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -53,8 +53,9 @@ jobs:
       - name: Run Sphinx doctests
         if: startsWith(matrix.os, 'ubuntu')
         shell: bash -l {0}
+        # Note below installs Euphonic too
         run: |
-          python -m pip install -r doc/requirements.txt
+          python -m pip install -r doc/requirements.txt numpy .[matplotlib,phonopy_reader]
           sphinx-build -c doc/source -b doctest doc/source .
       - name: Upload doctest results
         if: startsWith(matrix.os, 'ubuntu') && (success() || failure())
