--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -50,13 +50,15 @@ jobs:
 #        with:
 #          name: Unit test results ${{ matrix.os }}
 #          path: tests_and_analysis/test/reports/junit_report*.xml
-      - name: Run Sphinx doctests
+      - name: Install Euphonic for Sphinx doctests
         if: startsWith(matrix.os, 'ubuntu')
         shell: bash -l {0}
-        # Note below installs Euphonic too
-        run: |
-          python -m pip install -r doc/requirements.txt numpy .[matplotlib,phonopy_reader]
-          sphinx-build -c doc/source -b doctest doc/source .
+        run: python -m pip install -r doc/requirements.txt numpy .[matplotlib,phonopy_reader]
+      - name: Run Sphinx doctests
+        if: startsWith(matrix.os, 'ubuntu')
+        working-directory: ./doc
+        shell: bash -l {0}
+        run: sphinx-build -c source -b doctest source .
       - name: Upload doctest results
         if: startsWith(matrix.os, 'ubuntu') && (success() || failure())
         uses: actions/upload-artifact@v2
