--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -50,5 +50,5 @@ jobs:
       - name: Publish test results
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: artifacts/**/junit_report*.xml
+          junit_files: artifacts/**/junit_report*.xml
 
