Update actions versions (Node.js 12 deprecation) (#252)
* Update actions versions (Node.js 12 deprecation)

Currently am getting the following warning on Github Actions runners:

Node.js 12 actions are deprecated. For more information see:
https://github.blog/changelog/2022-09-22-github-actions-all-actions-will-begin-running-on-node16-instead-of-node12/.
Please update the following actions to use Node.js 16:
conda-incubator/setup-miniconda, actions/upload-artifact,
codecov/codecov-action, conda-incubator/setup-miniconda

* Update publish unit test results

* Update deprecated 'files' in publish-unit-test-result-action

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -45,7 +45,7 @@ jobs:
         run: python -m tox
       - name: Upload test results
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: Unit test results ${{ matrix.os }}
           path: tests_and_analysis/test/reports/junit_report*.xml
@@ -55,7 +55,7 @@ jobs:
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: tests_and_analysis/test/reports/coverage*.xml
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v3
         if: startsWith(matrix.os, 'ubuntu')
         with:
           files: tests_and_analysis/test/reports/coverage*.xml
@@ -66,10 +66,10 @@ jobs:
     if: success() || failure()
     steps:
       - name: Download Artifacts
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           path: artifacts
       - name: Publish test results
-        uses: EnricoMi/publish-unit-test-result-action@v1
+        uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          files: artifacts/**/junit_report*.xml
+          junit_files: artifacts/**/junit_report*.xml
