--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,7 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-envlist = pypi-py37-min,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py37,py310}
+envlist = {pypi,conda}-py37-min,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py37,py310}
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
@@ -55,6 +55,21 @@ conda_channels =
     conda-forge
     default
 conda_deps =
-    --file=../tests_and_analysis/tox_requirements.txt
+    --file={toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
+
+# Just test against a version of Numpy less than the latest
+# (Conda will automatically pin compatible Numpy versions,
+# so we don't know which is the oldest one available)
+[testenv:conda-py37-min]
+whitelist_externals = conda
+install_command = conda install {packages}
+conda_channels =
+    conda-forge
+    default
+conda_deps =
+    --file={toxinidir}/tests_and_analysis/tox_requirements.txt
+    numpy<1.23.5
+commands_pre =
+    conda install -c conda-forge euphonic={env:EUPHONIC_VERSION}
