--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        version: 1.0.0
+        version: [1.0.0]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
