--- a/release_tox.ini
+++ b/release_tox.ini
@@ -71,6 +71,6 @@ conda_channels =
     default
 conda_deps =
     --file={toxinidir}/tests_and_analysis/tox_requirements.txt
-    numpy=1.20
 commands_pre =
+    conda install "numpy<1.23"
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION}
