--- a/release_tox.ini
+++ b/release_tox.ini
@@ -72,5 +72,5 @@ conda_channels =
 conda_deps =
     --file={toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    conda install "numpy<1.23"
+    conda install numpy=1.20
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION}
