Change env name

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,8 +2,8 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-#envlist = {pypi,conda}-py37-min,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py37,py310}
-envlist = conda-py37-min
+#envlist = pypi-py37-min,conda-py37-old-np,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py37,py310}
+envlist = conda-py37-old-np
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
@@ -60,10 +60,9 @@ conda_deps =
 commands_pre =
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
 
-# Just test against a version of Numpy less than the latest
-# (Conda will automatically pin compatible Numpy versions,
-# so we don't know which is the oldest one available)
-[testenv:conda-py37-min]
+# Test against a version of Numpy less than the latest
+# See https://github.com/conda-forge/euphonic-feedstock/pull/20
+[testenv:conda-py37-old-np]
 whitelist_externals = conda
 install_command = conda install {packages}
 conda_channels =
