--- a/release_tox.ini
+++ b/release_tox.ini
@@ -60,7 +60,7 @@ conda_deps =
 commands_pre =
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
 
-# Test against a version of Numpy less than the latest
+# Test against a version of Numpy less than the latest for Conda
 # See https://github.com/conda-forge/euphonic-feedstock/pull/20
 [testenv:conda-py37-old-np]
 whitelist_externals = conda
@@ -71,5 +71,5 @@ conda_channels =
 conda_deps =
     --file={toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
-    conda install numpy=1.21
-    conda install -c conda-forge euphonic={env:EUPHONIC_VERSION}
+    conda install numpy=1.20
+    conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
