--- a/release_tox.ini
+++ b/release_tox.ini
@@ -2,8 +2,7 @@
 # Use conda to set up the python environments to run in
 requires = tox-conda
 # The python environments to run the tests in
-#envlist = pypi-py37-min,conda-py37-old-np,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py37,py310}
-envlist = conda-py37-old-np
+envlist = pypi-py37-min,conda-py37-old-np,{pypi,conda}-{py37,py38,py39,py310},pypisource-{py37,py310}
 # Skip the execution of setup.py as we do it with the correct version in commands_pre below
 skipsdist = True
 
