--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,5 +1,12 @@
 name: run-tests
 on:
+  push:
+    branches:
+      - '**master**'
+      - '**_run_ci**'
+      - '**release**'
+  pull_request:
+    types: [opened, reopened, labeled, synchronize]
   workflow_dispatch:
 
 jobs:
