Fix tests on CI
- Increase tolerances
- Increase number of q-points in structure factor tests - otherwise
  results vary too much on different systems
- Don't use brille.ApproxConfig at top level (breaks for tests where
  Brille isn't installed)
- Close all plots in test_plot to avoid interference with
  brille-convergence tests
- Add alternative to get_data_3d (not available until Matplotlib 3.1)

--- a/release_tox.ini
+++ b/release_tox.ini
@@ -8,8 +8,7 @@ skipsdist = True
 
 [testenv]
 changedir = tests_and_analysis/test
-commands =
-    python run_tests.py --report
+test_command = python run_tests.py --report
 
 # Test PyPI source distribution
 [testenv:pypisource-{py37,py310}]
@@ -22,6 +21,7 @@ commands_pre =
     --force-reinstall \
     'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
     --no-binary 'euphonic'
+commands = {[testenv]test_command}
 
 
 [testenv:pypi-{py37,py38,py39,py310}]
@@ -34,6 +34,7 @@ commands_pre =
     --force-reinstall \
     'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
+commands = {[testenv]test_command}
 
 [testenv:pypi-py37-min]
 install_command = python -m pip install --force-reinstall {opts} {packages}
@@ -45,8 +46,9 @@ commands_pre =
     python -m pip install --force-reinstall \
         -r{toxinidir}/tests_and_analysis/tox_requirements.txt
     python -m pip install \
-    'euphonic[matplotlib,phonopy_reader]=={env:EUPHONIC_VERSION}' \
+    'euphonic[matplotlib,phonopy_reader,brille]=={env:EUPHONIC_VERSION}' \
     --only-binary 'euphonic'
+commands = {[testenv]test_command}
 
 [testenv:conda-{py38,py39,py310}]
 whitelist_externals = conda
@@ -58,6 +60,8 @@ conda_deps =
     --file={toxinidir}/tests_and_analysis/tox_requirements.txt
 commands_pre =
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
+# Brille not available on conda
+commands = {[testenv]test_command} -m "not brille"
 
 # Test against a version of Numpy less than the latest for Conda
 # See https://github.com/conda-forge/euphonic-feedstock/pull/20
@@ -72,3 +76,5 @@ conda_deps =
 commands_pre =
     conda install numpy=1.20
     conda install -c conda-forge euphonic={env:EUPHONIC_VERSION} matplotlib-base pyyaml h5py
+# Brille not available on conda
+commands = {[testenv]test_command} -m "not brille"
