--- a/tox.ini
+++ b/tox.ini
@@ -80,7 +80,7 @@ commands_pre =
     python -m pip install \
         --upgrade \
         --upgrade-strategy eager \
-        '{toxinidir}[phonopy_reader,matplotlib]'
+        '{toxinidir}[phonopy_reader,matplotlib,brille]'
 commands =
     {[testenv]test_command} --cov -m multiple_extras
 
